tests/sksl/errors/ReservedNameThis.glsl
### Compilation failed:

error: 1: name 'this' is reserved
int this;
    ^^^^
1 error
